--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
 
         <!-- Social professional networking icons -->
         <ul class="social-icons pull-right">
-          <li><a href="" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+          <li><a href="https://www.facebook.com/david.smiley.10?ref=bookmarks" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
           <li><a href="" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
           <li><a href="" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
           <li><a href="" target="_blank"><i class="ai ai-academia-square ai-2x"></i></a></li>
