--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -27,7 +27,8 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap CSS files-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
   <!-- jQuery UI CSS (optional) -->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -37,7 +38,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600" rel="stylesheet">
 
   <!-- Font Awesome Web Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
   <!-- Academicons Courtesy of https://jpswalsh.github.io/academicons/ -->
   <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
@@ -59,10 +61,11 @@
 
     <div class="row">
       <div class="col-sm-4">
-        <img class="center-block img img-responsive img-thumbnail" src="http://placehold.it/250x250" alt="Image of Jane Smith">
+        <img class="center-block img img-responsive img-thumbnail" src="http://placehold.it/250x250"
+          alt="Image of Jane Smith">
 
-        <p id="title">Doctoral Candidate<br>
-          <span id="program">Political Science</span>
+        <p id="title">Graduate Studies Coordinator<br>
+          <span id="program">Department of History</span>
         </p>
 
         <table class="table" id="contact-table">
@@ -70,18 +73,18 @@
             <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
               <td>
-                James Trickington University<br>
-                1234 Happiness Dr.<br>
-                Anytown, State 12345
+                University of Notre Dame<br>
+                219 O'Shaughnessy Hall<br>
+                South Bend, IN 46617
               </td>
             </tr>
             <tr>
               <td><i class="fas fa-phone"></i></td>
-              <td><a href="tel:9999999999">(999) 999-9999</a></td>
+              <td><a href="tel:8123436899">(812) 343-6899</a></td>
             </tr>
             <tr>
               <td><i class="fas fa-at"></i></td>
-              <td><a href="mailto:jane.smith@example-uni.edu">jane.smith@nd.edu</a></td>
+              <td><a href="mailto:davidmsmiley@gmail.com">davidmsmiley@gmail.com</a></td>
             </tr>
           </tbody>
         </table>
@@ -90,18 +93,26 @@
       <div class="col-sm-8">
 
         <p>I am an {JOB TITLE} in the {SCHOOL|DEPARTMENT} at {UNIVERSITY|INSTITUTE|COMPANY} where I
-          {1st AREA OF RESPONSIBILITY}, {2nd AREA OF RESPONSIBILITY}, and {3rd AREA OF RESPONSIBILITY}. My research and teaching focus on {1st AREA}, {2nd AREA}, {3rd AREA} and {4th AREA}.</p>
+          {1st AREA OF RESPONSIBILITY}, {2nd AREA OF RESPONSIBILITY}, and {3rd AREA OF RESPONSIBILITY}. My research and
+          teaching focus on {1st AREA}, {2nd AREA}, {3rd AREA} and {4th AREA}.</p>
 
         <p>I received my {DEGREE} in {ACADEMIC FIELD} from {NAME OF UNIVERSITY} in {YEAR}. I
-          studied {AREAS SPECIFIC TO YOUR FIELD} under the direction of {ADVISOR'S NAME}. There I worked on {DESCRIBE RELEVANT MAJOR PROJECTS IN LATEST GRADUATE DEGREE}.</p>
+          studied {AREAS SPECIFIC TO YOUR FIELD} under the direction of {ADVISOR'S NAME}. There I worked on {DESCRIBE
+          RELEVANT MAJOR PROJECTS IN LATEST GRADUATE DEGREE}.</p>
 
-        <p>I am currently working on {SUMMARY LIST OF PROJECTS} with {COLLABORATORS, IF ANY} through the {UNIVERSITY|INSTITUTE|COMPANY, IF ANY}.</p>
+        <p>I am currently working on {SUMMARY LIST OF PROJECTS} with {COLLABORATORS, IF ANY} through the
+          {UNIVERSITY|INSTITUTE|COMPANY, IF ANY}.</p>
 
         <div id="read-more">
 
-          <p class="push-down-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolore doloremque, tenetur temporibus fugit maiores, labore porro nobis laborum animi consectetur omnis cum iure obcaecati voluptatem, eius sunt totam dolorum voluptatibus nostrum doloribus! Ipsa, a, aspernatur tenetur hic eum expedita.</p>
+          <p class="push-down-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolore doloremque,
+            tenetur temporibus fugit maiores, labore porro nobis laborum animi consectetur omnis cum iure obcaecati
+            voluptatem, eius sunt totam dolorum voluptatibus nostrum doloribus! Ipsa, a, aspernatur tenetur hic eum
+            expedita.</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolore doloremque, tenetur temporibus fugit maiores, labore porro nobis laborum animi consectetur omnis cum iure obcaecati voluptatem, eius sunt totam dolorum voluptatibus nostrum doloribus! Ipsa, a, aspernatur tenetur hic eum expedita.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolore doloremque, tenetur temporibus
+            fugit maiores, labore porro nobis laborum animi consectetur omnis cum iure obcaecati voluptatem, eius sunt
+            totam dolorum voluptatibus nostrum doloribus! Ipsa, a, aspernatur tenetur hic eum expedita.</p>
 
         </div>
         <!-- .read-more -->
@@ -135,7 +146,8 @@
   </div>
 
   <!-- Back-to-top button -->
-  <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link" href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
+  <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link"
+    href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
 
 
   <!-- footer include -->
@@ -145,7 +157,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- Bootstrap JS Library -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+    crossorigin="anonymous"></script>
 
   <!-- html file include script | used for navbar and footer -->
   <script src="js/w3data.js"></script>
@@ -157,7 +171,7 @@
   <script src="js/main.js"></script>
 
   <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
       $("li#about a").addClass("active");
       $("li#about a").addClass("hvr-bubble-bottom");
     });
