--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jane Smith, MS</title>
+  <title>David M. Smiley, MTS, MDiv</title>
 
   <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -61,8 +61,8 @@
 
     <div class="row">
       <div class="col-sm-4">
-        <img class="center-block img img-responsive img-thumbnail" src="http://placehold.it/250x250"
-          alt="Image of Jane Smith">
+        <img class="center-block img img-responsive img-thumbnail" src="https://photos.app.goo.gl/TUJ24SLtCwk17ZZQ8"
+          alt="Image of David Smiley">
 
         <p id="title">Graduate Studies Coordinator<br>
           <span id="program">Department of History</span>
