--- a/footer.html
+++ b/footer.html
@@ -6,19 +6,21 @@
 
 
 
-        <p>&copy; 2019 Jane Smith</p>
+        <p>&copy; 2019 David Smiley</p>
 
       </div>
       <div class="col-sm-6">
 
         <!-- Social professional networking icons -->
         <ul class="social-icons pull-right">
-          <li><a href="https://www.facebook.com/david.smiley.10?ref=bookmarks" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
-          <li><a href="" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
-          <li><a href="" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
-          <li><a href="" target="_blank"><i class="ai ai-academia-square ai-2x"></i></a></li>
-          <li><a href="" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
-          <li><a href="" target="_blank"><i class="fab fa-researchgate fa-2x"></i></a></li>
+          <li><a href="https://www.facebook.com/david.smiley.10?ref=bookmarks" target="_blank"><i
+                class="fab fa-facebook fa-2x"></i></a></li>
+          <li><a href="https://twitter.com/thedavidmsmiley" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+          </li>
+          <li><a href="https://nd.academia.edu/DavidMSmiley" target="_blank"><i
+                class="ai ai-academia-square ai-2x"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/david-m-smiley/" target="_blank"><i
+                class="fab fa-linkedin fa-2x"></i></a></li>
         </ul>
 
       </div>
