--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,8 @@
         <!-- Social professional networking icons -->
         <ul class="social-icons pull-right">
           <li><a href="https://www.facebook.com/david.smiley.10?ref=bookmarks" target="_blank"><i
-                class="fab fa-facebook fa-2x"></i></a></li>
+                class="fab fa-facebook fa-2x"></i></a>
+          </li>
           <li><a href="https://twitter.com/thedavidmsmiley" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
           </li>
           <li><a href="https://nd.academia.edu/DavidMSmiley" target="_blank"><i
