--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 
     <div class="row">
       <div class="col-sm-4">
-        <img class="center-block img img-responsive img-thumbnail" src="https://photos.app.goo.gl/TUJ24SLtCwk17ZZQ8"
-          alt="Image of David Smiley">
+        <img class="center-block img img-responsive img-thumbnail" src="david-smiley.jpg" alt="Image of David Smiley">
 
         <p id="title">Graduate Studies Coordinator<br>
           <span id="program">Department of History</span>
@@ -126,16 +125,16 @@
 
         <ul id="education">
           <li>
-            Ph.D. in {FIELD}, {YEAR}<br>
-            <span class="university"><em>University of Southern California</em></span>
+            Master of Theological Studies, 2019<br>
+            <span class="university"><em>University of Notre Dame</em></span>
           </li>
           <li>
-            M.S. in {FIELD}, {YEAR}<br>
-            <span class="university"><em>{UNIVERSITY}</em></span>
+            Master of Divinity, 2017<br>
+            <span class="university"><em>Gordon-Conwell Theological Seminary</em></span>
           </li>
           <li>
-            B.S. in {FIELD}, {YEAR}<br>
-            <span class="university"><em>{UNIVERSITY}</em></span>
+            Bachelor of Arts in Biblical Languages, 2014<br>
+            <span class="university"><em>North Central University</em></span>
           </li>
 
         </ul>
