--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 
     <div class="row">
       <div class="col-sm-4">
-        <img class="center-block img img-responsive img-thumbnail"
-          src="C:\Users\David\Documents\GitHub\academic-website-template\img\david-smiley.jpg"
+        <img class="center-block img img-responsive img-thumbnail" src="img\david-smiley.jpg"
           alt="Image of David Smiley">
 
         <p id="title">Graduate Studies Coordinator<br>
