--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
       </div>
       <div class="col-sm-8">
 
+        <p>I am a Graduate Studies Coordinator in the History Department at the University of Notre Dame where I
+          administer the PhD program, work closly with the Director of Graduate Studies, and process tuition and
+          maintain stipend reports in excess of $1,000,000 per year. Additionally, my research and
+          teaching focus on Biblical Literature in the Persian Period, Old Testament Theology, Inner-Biblical Exegesis,
+          and Septuagint Studies.</p>
 
         <p>I received my {DEGREE} in {ACADEMIC FIELD} from {NAME OF UNIVERSITY} in {YEAR}. I
           studied {AREAS SPECIFIC TO YOUR FIELD} under the direction of {ADVISOR'S NAME}. There I worked on {DESCRIBE
