--- a/index.html
+++ b/index.html
@@ -95,15 +95,14 @@
         <p>I am a Graduate Studies Coordinator in the History Department at the University of Notre Dame where I
           administer the PhD program, work closly with the Director of Graduate Studies, and process tuition and
           maintain stipend reports in excess of $1,000,000 per year. Additionally, my research and
-          teaching focus on Biblical Literature in the Persian Period, Old Testament Theology, Inner-Biblical Exegesis,
-          and Septuagint Studies.</p>
+          teaching focus on biblical literature in the Persian Period, Old Testament theology, inner-biblical exegesis,
+          and Septuagint studies.</p>
 
-        <p>I received my {DEGREE} in {ACADEMIC FIELD} from {NAME OF UNIVERSITY} in {YEAR}. I
-          studied {AREAS SPECIFIC TO YOUR FIELD} under the direction of {ADVISOR'S NAME}. There I worked on {DESCRIBE
-          RELEVANT MAJOR PROJECTS IN LATEST GRADUATE DEGREE}.</p>
+        <p>I have done my recent graduate work at the University of Notre Dame. I
+          studied the historical books of the Bible under the direction of the late Gary N. Knoppers.</p>
 
-        <p>I am currently working on {SUMMARY LIST OF PROJECTS} with {COLLABORATORS, IF ANY} through the
-          {UNIVERSITY|INSTITUTE|COMPANY, IF ANY}.</p>
+        <p>I am currently developing my programming skills in Python, and I hope to use my time between degrees to
+          integrate the latest trends in the Digital Humanities with my research on the book of Chronicles.</p>
 
         <div id="read-more">
 
