--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Randal Sean Harrison, PhD</title>
+   <title>David M. Smiley, MTS, MDiv</title>
 
    <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
    <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
@@ -18,7 +18,7 @@
    <link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-icon-144x144.png">
    <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-icon-152x152.png">
    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-icon-180x180.png">
-   <link rel="icon" type="image/png" sizes="192x192"  href="favicons/android-icon-192x192.png">
+   <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-icon-192x192.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
@@ -27,7 +27,8 @@
    <meta name="theme-color" content="#ffffff">
 
    <!-- Bootstrap CSS files-->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
    <!-- jQuery UI CSS (optional) -->
    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -37,7 +38,8 @@
    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600" rel="stylesheet">
 
    <!-- Font Awesome Web Icons -->
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
    <!-- Academicons Courtesy of https://jpswalsh.github.io/academicons/ -->
    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
@@ -46,7 +48,6 @@
    <link rel="stylesheet" href="css/main.css">
 
    <style>
-
       .panel-body {
          background-color: #f6f7fb;
       }
@@ -58,7 +59,6 @@
       .panel-title {
          font-weight: bold !important;
       }
-
    </style>
 
 </head>
@@ -76,7 +76,13 @@
       <div class="row">
          <div class="col-sm-12">
             <h1>Projects</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quas fugiat repellendus ex adipisci! Consectetur dolorem facere perferendis placeat repellat aspernatur odio, explicabo, ab quaerat non saepe reprehenderit tempore, architecto neque eum quis culpa vel numquam voluptas dolores. Cumque similique vel culpa alias vero optio iusto, nisi deserunt officiis, perferendis, magni illum ad iure commodi magnam labore soluta atque. Exercitationem esse provident dolorum non vero incidunt nisi cum est dolorem quis accusamus, nemo autem vel labore adipisci voluptatum, repudiandae maxime at ratione ab dolore quam ducimus. Cupiditate.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quas fugiat repellendus ex adipisci!
+               Consectetur dolorem facere perferendis placeat repellat aspernatur odio, explicabo, ab quaerat non saepe
+               reprehenderit tempore, architecto neque eum quis culpa vel numquam voluptas dolores. Cumque similique vel
+               culpa alias vero optio iusto, nisi deserunt officiis, perferendis, magni illum ad iure commodi magnam
+               labore soluta atque. Exercitationem esse provident dolorum non vero incidunt nisi cum est dolorem quis
+               accusamus, nemo autem vel labore adipisci voluptatum, repudiandae maxime at ratione ab dolore quam
+               ducimus. Cupiditate.</p>
 
          </div>
 
@@ -84,18 +90,18 @@
 
       <div class="row push-down-4" id="projects">
 
-        <div class="col-sm-6 col-md-4">
-           <div class="panel panel-default">
-              <div class="panel-heading">
-                 <h5 class="panel-title">Project 1</h5>
-              </div>
-              <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
-              </div>
-              <div class="panel-footer">Lorem ipsum dolor.</div>
-           </div>
-        </div>
+         <div class="col-sm-6 col-md-4">
+            <div class="panel panel-default">
+               <div class="panel-heading">
+                  <h5 class="panel-title">Project 1</h5>
+               </div>
+               <div class="panel-body"><img src="http://placehold.it/800x500" class="img img-responsive img-thumbnail">
+               </div>
+               <div class="panel-footer">Lorem ipsum dolor.</div>
+            </div>
+         </div>
 
-        <div class="col-sm-6 col-md-4">
+         <div class="col-sm-6 col-md-4">
             <div class="panel panel-default">
                <div class="panel-heading">
                   <h5 class="panel-title">Project 2</h5>
@@ -251,11 +257,12 @@
          </div>
 
       </div>
-   <!-- .row -->
+      <!-- .row -->
    </div>
 
    <!-- Back-to-top button -->
-   <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link" href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
+   <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link"
+      href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
 
    <!-- footer include -->
    <div w3-include-html="footer.html"></div>
@@ -264,7 +271,9 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
    <!-- Bootstrap JS Library -->
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+      integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+      crossorigin="anonymous"></script>
 
    <!-- html file include script | used for navbar and footer -->
    <script src="js/w3data.js"></script>
