--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Jane Smith, MS</title>
+   <title>David M. Smiley, MTS, MDiv</title>
 
    <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
    <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
@@ -18,7 +18,7 @@
    <link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-icon-144x144.png">
    <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-icon-152x152.png">
    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-icon-180x180.png">
-   <link rel="icon" type="image/png" sizes="192x192"  href="favicons/android-icon-192x192.png">
+   <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-icon-192x192.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
@@ -27,7 +27,8 @@
    <meta name="theme-color" content="#ffffff">
 
    <!-- Bootstrap CSS files-->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
    <!-- jQuery UI CSS (optional) -->
    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -37,7 +38,8 @@
    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600" rel="stylesheet">
 
    <!-- Font Awesome Web Icons -->
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
    <!-- Academicons Courtesy of https://jpswalsh.github.io/academicons/ -->
    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
@@ -62,7 +64,9 @@
             <h1>Research</h1>
             <p>I favor a {DESCRIBE MAIN THEORETICAL/METHODOLOGICAL APPROACH IN 1 SENTENCE}.</p>
 
-            <p>My {PHD|MS|MA} work in the {DEPARTMENT} at {UNIVERSITY} was on {AREAS OF RESEARCH} where I {DESRCRIBE WHAT YOU STUDIED IN 1 OR 2 SENTENCES}. I apply my learning to the classroom by integrating it into the {SPECIFIC COURSE} course, creating a more realistic and authentic experience.</p>
+            <p>My {PHD|MS|MA} work in the {DEPARTMENT} at {UNIVERSITY} was on {AREAS OF RESEARCH} where I {DESRCRIBE
+               WHAT YOU STUDIED IN 1 OR 2 SENTENCES}. I apply my learning to the classroom by integrating it into the
+               {SPECIFIC COURSE} course, creating a more realistic and authentic experience.</p>
 
             <p>I focus specifically in these areas:</p>
 
@@ -82,28 +86,40 @@
             <h5>Published Papers</h5>
 
             <ul class="publications">
-               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing
+                  House.</li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
             </ul>
 
             <h5>Submitted for Publication</h5>
 
             <ul class="publications">
-               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing
+                  House.</li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
             </ul>
 
             <h5>Working Papers</h5>
 
             <ul class="publications">
-               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
+               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing
+                  House.</li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
+               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12
+               </li>
             </ul>
 
             <!-- Dissertation abstract -->
@@ -113,7 +129,8 @@
             <!-- Sample quote from the dissertation -->
             <blockquote>{SAMPLE/QUOTE FROM YOUR DISSERTATION}
                <footer>
-                  Smith, Jane. (2015). <em>Title of Dissertation.</em> (Doctoral dissertation). Retrieved from Some Online Repository. (http://online-repository.com)
+                  Smith, Jane. (2015). <em>Title of Dissertation.</em> (Doctoral dissertation). Retrieved from Some
+                  Online Repository. (http://online-repository.com)
                </footer>
             </blockquote>
 
@@ -131,7 +148,8 @@
    </div>
 
    <!-- Back-to-top button -->
-   <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link" href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
+   <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link"
+      href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
 
    <!-- footer include -->
    <div w3-include-html="footer.html"></div>
@@ -140,7 +158,9 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
    <!-- Bootstrap JS Library -->
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+      integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+      crossorigin="anonymous"></script>
 
    <!-- html file include script | used for navbar and footer -->
    <script src="js/w3data.js"></script>
@@ -152,7 +172,7 @@
    <script src="js/main.js"></script>
 
    <script>
-      $(document).ready(function() {
+      $(document).ready(function () {
          $("li#research a").addClass("active");
          $("li#research a").addClass("hvr-bubble-bottom");
 
