--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <td>
                 University of Notre Dame<br>
                 219 O'Shaughnessy Hall<br>
-                South Bend, IN 46617
+                Notre Dame, IN 46556
               </td>
             </tr>
             <tr>
