--- a/vitae.html
+++ b/vitae.html
@@ -67,10 +67,10 @@
             <p>Find my curriculum vitae, below. References available upon request.</p>
 
             <p class='text-right'><a
-                  href='https://docs.google.com/document/d/1V-AFyMaIejy_EnHchsy_BF4stvmluYVRHu7YbNOt9DY/edit?usp=sharing'
+                  href='https://docs.google.com/document/d/1V-AFyMaIejy_EnHchsy_BF4stvmluYVRHu7YbNOt9DY/edit'
                   target='_blank'><i class='fas fa-print fa-fw' aria-hidden='true'></i>&nbsp;Print Vitae</a></p><iframe
                width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item'
-               src='https://docs.google.com/document/d/1V-AFyMaIejy_EnHchsy_BF4stvmluYVRHu7YbNOt9DY/edit?usp=sharing'
+               src='https://docs.google.com/document/d/1V-AFyMaIejy_EnHchsy_BF4stvmluYVRHu7YbNOt9DY/preview'
                allowfullscreen></iframe>
 
          </div>
